# altium-kicad-cli

./: .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  README.ja.md  README.zh-Hans.md  README.zh-Hant.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
akcli-parts/CNOTAPARTS/footprint/: R0603.kicad_mod
akcli-parts/CNOTAPARTS/symbol/: akcli.kicad_sym
commands/: circuit-diff.md  circuit-draw.md  circuit-parts.md  circuit-pinmap.md  circuit-review.md
docs/: SPEC.md  agent-state.md  cli-reference.md  codex-plugin.md  jlc.md  kicad-format-gotchas.md  op-list-authoring.md  releasing.md  review-rules.md  seo.md  sim.md
docs/assets/: hero.html
examples/: akcli.toml.example  altium-kicad-cli.toml.example
hooks/: hooks.json
schemas/: datasheet-facts.schema.json  findings.schema.json  netlist.schema.json  ops.capabilities.json  ops.schema.json  proposals.schema.json  schematic.schema.json
skills/akcli-altium-interop/: SKILL.md
skills/akcli-circuit-debug/: SKILL.md
skills/akcli-circuit-design/: SKILL.md
skills/akcli-datasheet-facts/: SKILL.md
skills/akcli-deep-review/: SKILL.md
skills/akcli-jlcpcb-capabilities/: SKILL.md
skills/akcli-jlcpcb-capabilities/references/: assembly-and-stencil.md  cost-and-fab-profile.md  dfm-and-file-prep.md  flex-fpc.md  jlcpcb-international.md  rigid-pcb.md
skills/akcli-parts-sourcing/: SKILL.md
skills/akcli-release-gating/: SKILL.md
skills/akcli-schematic-authoring/: SKILL.md
skills/akcli-schematic-review/: SKILL.md
skills/akcli-setup/: SKILL.md
skills/altium-interop/: SKILL.md
skills/circuit-debug/: SKILL.md
skills/circuit-design/: SKILL.md
skills/design-calc/: SKILL.md
skills/jlcpcb-capabilities/: SKILL.md
skills/parts-sourcing/: SKILL.md
skills/schematic-authoring/: SKILL.md
skills/schematic-review/: SKILL.md
src/akcli/: __init__.py  arrange.py  cli.py  config.py  journal.py  kicad_escape.py  libtable.py  model.py  ops.py  relink.py  render_art.py  render_svg.py  report.py  safety.py
src/akcli/checks/: bom.py  layout.py
src/akcli/commands/: calc.py  checks.py  doc.py  doctor.py  drawing.py  jlc.py  library.py  log.py  query.py  release.py  render.py  review.py  sim.py  view.py
src/akcli/drivers/: jlc2kicad.py  pdftotext.py
src/akcli/readers/: footprint_lib.py  gerber.py  kicad.py  kicad_lib.py
src/akcli/review/: __init__.py  diff.py  engine.py  facts.py  geometry.py  propose.py  tables.py  topo.py  tree.py  validate.py
src/akcli/schemas/: doc.schema.json
src/akcli/sim/: builtin.lib  engine.py
src/akcli/webui/: server.py
src/akcli/writers/: kicad.py  lib_cache.py
src/altium_kicad_cli/: __init__.py  __main__.py  cli.py  config.py  errors.py  exporters.py  model.py  netbuild.py  ops.py  report.py  safety.py  units.py
src/altium_kicad_cli/adapters/: __init__.py  dts.py  pinout_md.py
src/altium_kicad_cli/calc/: __init__.py  analog.py  codes.py  electrical.py  eseries.py  ic.py  interface.py  opsmap.py  pcb.py  power.py  protection.py  registry.py  regulator.py  rf.py  sensor.py  si.py
src/altium_kicad_cli/checks/: __init__.py  _rails.py  bom.py  diff.py  erc.py  geom.py  intent.py  layout.py  libsync.py  nets.py  pinmap.py  power.py
src/altium_kicad_cli/commands/: __init__.py  _shared.py  calc.py  checks.py  drawing.py  jlc.py  query.py  sim.py  view.py
src/altium_kicad_cli/drivers/: __init__.py  _binfetch.py  _convert.py  jlc2kicad.py  kicad_cli.py  nlbn.py  npnp.py
src/altium_kicad_cli/parts/: __init__.py  bom_jlc.py  datasheet.py  easyeda.py  search.py
src/altium_kicad_cli/readers/: __init__.py  _cfbf.py  altium_pcb.py  altium_pcb_bin.py  altium_prj.py  altium_records.py  altium_sch.py  altium_schlib.py  kicad.py  kicad_lib.py  sexpr.py
src/altium_kicad_cli/schemas/: sim.schema.json
src/altium_kicad_cli/sim/: __init__.py  assertions.py  builtin.lib  deck.py  engine.py  models.py  wave.py
src/altium_kicad_cli/webui/: live.html  server.py
src/altium_kicad_cli/writers/: __init__.py  connectivity.py  geometry.py  instances.py  kicad.py  lib_cache.py  sexpr_writer.py
tests/: __init__.py  conftest.py  test_altium_hierarchy.py  test_altium_pcb.py  test_altium_pcb_bin.py  test_altium_records.py  test_altium_sch.py  test_altium_schlib.py  test_altium_sweep.py  test_arrange_groups.py  test_arrange_groups_properties.py  test_binfetch.py  test_bom.py  test_bridge.py  test_bus_alias.py  test_bus_gate.py  test_bus_netlist.py  test_calc.py  test_calc_cli.py  test_calc_new.py  test_cfbf.py  test_check_lock.py  test_checks_intent.py  test_cli.py  test_cli_round3.py  test_config.py  test_corpus_groups.py  test_corpus_pod.py  test_corpus_power_entry.py  test_diff.py  test_doc.py  test_docs_conformance.py  test_draw_cli.py  test_drivers_convert.py  test_dts.py  test_e2e_draw.py  test_erc.py  test_errors.py  test_expected_cli.py  test_exporters.py  (+72 more)
tests/fixtures/: MANIFEST.sha256  junction_cross.SchDoc  junction_cross.expected.json  junction_cross.records.txt  no_erc.SchDoc  no_erc.expected.json  no_erc.records.txt  ole_fatchain.SchDoc  ole_minifat.SchDoc  ole_minifat.records.txt  shared_name_label.SchDoc  shared_name_label.expected.json  shared_name_label.records.txt  t_junction.SchDoc  t_junction.expected.json  t_junction.records.txt  two_gnd_ports.SchDoc  two_gnd_ports.expected.json  two_gnd_ports.records.txt
tests/fixtures/_gen/: altium_fixture.py  cfbf_builder.py  ole_writer.py
tests/golden/: check-power_entry.json  corpus_replay_baseline.json  nets-power_entry.json  review-board_v8.json  review-power_entry.json  review-shared_name_label.json
tools/: corpus_replay.py  seo-apply.sh  sync_version.py
tools/agent_eval/: README.md  run_eval.py
tools/live-view/: README.md  index.html  watcher.py
tools/ui-test/: browser_test.mjs
(+70 files in other folders)
