[build-system]
# PEP 639 bare license string (`license = "MIT"`) requires setuptools >= 77.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
# PyPI dist name: the distribution ships as `akcli-kicad` while the import
# package and CLI stay `akcli` (see src/akcli/__init__.py name cascade);
# keep the three in lockstep.
name = "akcli-kicad"
version = "0.15.0"
description = "AI-native schematic design agent, purpose-built for KiCad: draw and edit .kicad_sch from JSON op-lists with net-diff safety rails, run ERC/design/intent checks, simulate on bundled ngspice, source parts, and import Altium .SchDoc/.PcbDoc read-only into the KiCad flow."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tipoLi5890/akcli"
Repository = "https://github.com/tipoLi5890/akcli.git"
Changelog = "https://github.com/tipoLi5890/akcli/blob/main/CHANGELOG.md"

[project.scripts]
akcli = "akcli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4", "build", "twine", "ruff>=0.15", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"akcli.webui" = ["*.html"]
"akcli.schemas" = ["*.json"]
# sim/builtin.lib is loaded at runtime via Path(__file__); it MUST ship in the
# wheel or `akcli sim` with a builtin model breaks on a non-editable install.
"akcli.sim" = ["*.lib"]
# vendored MIT library — ship its license/provenance for compliance.
"akcli._vendor.jlc2kicadlib" = ["LICENSE", "PROVENANCE.md"]

[tool.ruff]
# Vendored jlc2kicadlib is kept byte-close to upstream; never lint it.
extend-exclude = ["src/akcli/_vendor"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# `l` is inductance throughout the calc domain, not an ambiguous name.
"src/akcli/calc/electrical.py" = ["E741"]
"src/akcli/calc/power.py" = ["E741"]
# Grandfathered spare imports/f-strings; clean up at next functional touch
# rather than churning otherwise-untouched modules for the lint gate.
"src/akcli/calc/registry.py" = ["F401"]
"src/akcli/calc/regulator.py" = ["F401"]
"src/akcli/ops.py" = ["F401"]
"src/akcli/parts/bom_jlc.py" = ["F401", "F541"]
# Deliberate compact paired coordinate statements in the S-expression writer.
"src/akcli/writers/kicad.py" = ["E702"]
# Tests favor readability: spare imports/locals and compact fuzz mutators are fine.
"tests/**" = ["E702", "E741", "F401", "F841"]

[tool.mypy]
# Beachhead: gate packages module-by-module as each is brought up to the bar
# rather than the whole tree at once. Covered so far: the networked layer
# (parts), the calculators, and the typed core (model/errors/units/safety/
# netdiff/journal/render_svg/kicad_escape/config/arrange).
files = [
    "src/akcli/parts", "src/akcli/calc",
    "src/akcli/model.py", "src/akcli/errors.py", "src/akcli/units.py",
    "src/akcli/safety.py", "src/akcli/netdiff.py", "src/akcli/journal.py",
    "src/akcli/render_svg.py", "src/akcli/kicad_escape.py",
    "src/akcli/config.py", "src/akcli/arrange.py",
]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
# parts/ imports ..model, ..checks.bom (untyped elsewhere in the tree); check
# call sites here but don't cascade errors into or require annotations on
# modules outside this beachhead.
follow_imports = "silent"

[[tool.mypy.overrides]]
# jlcsearch/EasyEDA JSON payloads are untyped `object`/`dict` by design (see
# module docstrings) — the defensive `getattr`/duck-typed opener plumbing
# isn't worth fighting the checker over for a first pass.
module = "akcli.parts.*"
disallow_untyped_calls = false
